# ul-os-telegram-bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: audit.py  breaker.py  config.py  handlers.py  handlers_claude.py  handlers_komplet.py  handlers_voice.py  handlers_wrzutnia.py  health_endpoint.py  idempotency.py  limiter.py  main.py  monitor.py  observability.py  voice_mode.py
app/services/: agent.py  agent_prompts.py  agent_session.py  conversational.py  dlq.py  generator.py  hos_uploader.py  ingest_client.py  mcp_client.py  notifier.py  perplexity.py  research.py  tts.py  usage_stats.py  whisper_local.py
app/templates/: README.md
docs/: ARCHITECTURE.md  COMMANDS.md  DEPLOYMENT.md  TROUBLESHOOTING.md
scripts/: audit_log_migration.sql  com.ulos.telegram-bot.plist  get_chat_ids.sh  install-launchd.sh  restic-backup.sh  rotate-mcp-token.sh  rotate-secret.sh
tests/: conftest.py  test_agent_approval.py  test_agent_mcp_retry.py  test_agent_session.py  test_audit.py  test_breaker.py  test_config.py  test_idempotency.py  test_limiter.py  test_services.py
