[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ul-os-telegram-bot"
version = "1.0.0"
description = "UL OS Telegram bot dla ekosystemu HiveLive"
requires-python = ">=3.11"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ASYNC", # async checks
    "S",    # bandit (security)
]
ignore = [
    "E501",  # line too long (let formatter handle)
    "S101",  # assert in tests
    "S105",  # hardcoded password (false positives)
    "S106",  # j/w
    "S311",  # random not crypto (placeholder)
    "S603",  # subprocess (we trust args)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]
"scripts/*" = ["S605", "S607"]  # subprocess shell

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
